--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   #State management
   get: ^4.6.1
 
+ #UI
+  flutter_svg: ^0.20.0-nullsafety.3
+
   domain:
     path: ./domain
 
@@ -43,10 +46,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
 
   uses-material-design: true
 
