--- a/data/pubspec.yaml
+++ b/data/pubspec.yaml
@@ -15,6 +15,19 @@ dependencies:
   shared_preferences:
   dartz: ^0.10.1
 
+  # Firebase
+  firebase_auth: ^3.3.4
+  firebase_core: ^1.10.6
+  cloud_firestore: ^3.1.5
+  firebase_remote_config: ^1.0.3
+  firebase_messaging: ^11.2.4
+  firebase_analytics: ^9.0.4
+
+  # Social
+  google_sign_in: ^5.1.0
+  flutter_facebook_auth: ^3.5.7
+#  flutter_facebook_login: ^3.0.0
+  email_validator: '^1.0.6'
 
   core:
     path: ../core
