--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,7 +29,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.palmgrid.loyalty"
+        applicationId "com.palmgrid.aactivpay"
         minSdkVersion 21
         targetSdkVersion 30
         multiDexEnabled true
