--- a/data/pubspec.yaml
+++ b/data/pubspec.yaml
@@ -25,8 +25,8 @@ dependencies:
 
   # Social
   google_sign_in: ^5.1.0
+  flutter_login_facebook: ^1.2.0
   flutter_facebook_auth: ^3.5.7
-#  flutter_facebook_login: ^3.0.0
   email_validator: '^1.0.6'
 
   core:
