--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   circular_countdown: ^2.1.0
   flutter_slidable: ^1.2.0
   fluttertoast: ^8.0.9
-
+  marquee: ^1.7.0
   #google_map
   google_maps_flutter: ^2.0.9
   location: ^4.3.0
